--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "element-ui": "^2.13.2",
+    "js-cookie": "^2.2.1",
+    "json-server": "^0.16.1",
+    "mockjs": "^1.1.0",
+    "nprogress": "^0.2.0",
+    "ramda": "^0.27.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
